@@ -1,3 +1,12 @@
+Mon, 14 Jan 2008 20:04:25 +0100 <thp@perli.net>
+Add a checkbox to keep episodes when removing channels
+
+	* src/gpodder/gui.py: Add a checkbox to the confirmation dialog when
+	removing a podcast channel, so the user has the option to remove the
+	podcast feed from gPodder's subscription list, but still keep the
+	downloaded files on the harddisk (via a checkbox in the dialog)
+	(Closes: http://gpodder.thegithouse.com/show_bug.cgi?id=1)
+
 Thu, 10 Jan 2008 08:44:00 +0100 <thp@perli.net>
 Updated Russian translation by Hex
 
